--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,5 +15,8 @@
   "[json]": {
     "editor.defaultFormatter": "denoland.vscode-deno"
   },
-  "editor.formatOnSave": true
+  "editor.formatOnSave": true,
+  "[rust]": {
+    "editor.defaultFormatter": "rust-lang.rust-analyzer"
+  }
 }
